
add_executable(main2 main.cpp)
add_executable(t1 t1.cpp)
add_executable(t2 t2.cpp)
add_executable(t3 t3.cpp)
add_executable(t4 t4.cpp)
add_executable(t5 t5.cpp)
add_executable(t6 t6.cpp)
add_executable(t7 t7.cpp)
add_executable(t8 t8.cpp)
add_executable(t9 t9.cpp)
add_executable(t10 t10.cpp)
add_executable(testt test.cpp)